Various style fixes

--- a/data/color.toml
+++ b/data/color.toml
@@ -1,5 +1,5 @@
 dark_active_font_color = "#aed581"
-dark_link_color = "#FFD866"
+dark_link_color = "#6DF0E1"
 dark_link_hover_color = "#FF6188"
 dark_nav_logo_color = "#FCFCFA"
 dark_nav_menu_color = "#FCFCFA"
